--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,3 +1,7 @@
+// SPDX-FileCopyrightText: 2025 Ali Sajid Imami <Ali.Sajid.Imami@gmail.com>
+//
+// SPDX-License-Identifier: CC0-1.0
+
 {
 	"extends": "./.svelte-kit/tsconfig.json",
 	"compilerOptions": {
