--- a/.github/workflows/scorecard.yaml
+++ b/.github/workflows/scorecard.yaml
@@ -3,7 +3,7 @@ name: Scorecard Supply-Chain Security
 on:
     branch_protection_rule:
     schedule:
-        - cron: "30 1 * * 4"
+        - cron: '30 1 * * 4'
     push:
         branches:
             - main
