--- a/mise.toml
+++ b/mise.toml
@@ -32,12 +32,20 @@ description = "Type-check with svelte-check in watch mode"
 run = "pnpm check:watch"
 
 [tasks.lint]
-description = "Lint code with ESLint and Prettier"
+description = "Lint and check code with ESLint and Prettier (no fixes)"
+run = "pnpm lint"
+
+[tasks."lint:check"]
+description = "Check code with ESLint and Prettier (alias for lint)"
 run = "pnpm lint"
 
 [tasks.format]
-description = "Format code with Prettier"
+description = "Format code with Prettier (write changes)"
 run = "pnpm format"
+
+[tasks."format:check"]
+description = "Check code formatting with Prettier (no changes)"
+run = "pnpm exec prettier --check ."
 
 [tasks.test]
 description = "Run all tests (unit + e2e)"
@@ -61,4 +69,4 @@ run = "pnpm prepare"
 
 [tasks.ci]
 description = "Run CI checks (lint, type-check, test)"
-depends = ["lint", "check", "test"]
+depends = ["lint:check", "format:check", "check", "test"]
