--- a/package.json
+++ b/package.json
@@ -37,17 +37,7 @@
     "packageManager": "pnpm@10.18.3",
     "private": true,
     "scripts": {
-        "build": "vite build",
-        "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
-        "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
-        "dev": "vite dev",
-        "format": "prettier --write .",
-        "lint": "prettier --check . && eslint .",
-        "prepare": "svelte-kit sync || echo ''",
-        "preview": "vite preview",
-        "test": "npm run test:unit -- --run && npm run test:e2e",
-        "test:e2e": "playwright test",
-        "test:unit": "vitest"
+        "prepare": "svelte-kit sync || echo ''"
     },
     "type": "module",
     "version": "0.0.1"
