--- a/.github/workflows/codeql.yaml
+++ b/.github/workflows/codeql.yaml
@@ -2,7 +2,7 @@ name: CodeQL Analysis
 
 on:
     push:
-        branches:
+        branches-ignore:
             - main
     pull_request:
         branches:
