--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -2,8 +2,10 @@ name: Test and Check
 
 on:
     pull_request:
-    push:
         branches:
+            - main
+    push:
+        branches-ignore:
             - main
 
 permissions:
