build: add renovate config file

--- a/REUSE.toml
+++ b/REUSE.toml
@@ -30,6 +30,7 @@ path = [
     ".prettierrc.json",
     ".prettierignore",
     ".gitignore",
+    "renovate.json",
     ".gitleaksignore",
     ".markdownlint.json",
     ".markdownlintignore",
