--- a/mise.toml
+++ b/mise.toml
@@ -5,7 +5,7 @@
 node = "22.20.0"
 pre-commit = "4.3.0"
 
-"ubi:cocogitto/cocogitto" = {version = "6.4.0", executable = "cog"}
+"ubi:cocogitto/cocogitto" = {version = "6.4.0", exe= "cog"}
 
 [env]
 NODE_ENV = "development"
