--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -27,6 +27,7 @@ jobs:
                       mise.jdx.dev:443
                       objects.githubusercontent.com:443
                       registry.npmjs.org:443
+                      playwright.azureedge.net:443
 
             - name: Checkout repository
               uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
