--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -37,6 +37,9 @@ jobs:
               with:
                   install_args: --yes
 
+            - name: Install dependencies
+              run: mise run install
+
             - name: Sync SvelteKit
               run: mise run sync
 
