--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -19,7 +19,7 @@ jobs:
             - name: Harden Runner
               uses: step-security/harden-runner@91182cccc01eb5e619899d80e4e971d6181294a7 # v2.10.1
               with:
-                  disable-sudo: true
+                  disable-sudo: false
                   egress-policy: block
                   allowed-endpoints: >
                       api.github.com:443
@@ -28,6 +28,10 @@ jobs:
                       objects.githubusercontent.com:443
                       registry.npmjs.org:443
                       playwright.azureedge.net:443
+                      archive.ubuntu.com:80
+                      azure.archive.ubuntu.com:80
+                      security.ubuntu.com:80
+                      packages.microsoft.com:443
 
             - name: Checkout repository
               uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
