--- a/mise.toml
+++ b/mise.toml
@@ -3,6 +3,7 @@
 
 [tools]
 node = "22.20.0"
+"npm:wrangler" = "4.45.4"
 pnpm = "10.20.0"
 pre-commit = "4.3.0"
 
@@ -10,6 +11,7 @@ pre-commit = "4.3.0"
 
 [env]
 NODE_ENV = "development"
+'_'.file = { path = ".env" }
 
 [tasks.dev]
 description = "Start development server"
@@ -74,11 +76,3 @@ run = "pnpm exec svelte-kit sync || echo ''"
 [tasks.ci]
 description = "Run CI checks (lint, type-check, test)"
 depends = ["lint:check", "format:check", "check", "test"]
-
-[tasks.tarball]
-description = "Create tarball from build directory (fahrenheight-{version}-{sha}.tgz)"
-run = "./.mise/tasks/create_tarball.sh"
-
-[tasks.package]
-description = "Build and create tarball (build → tarball)"
-depends = ["build", "tarball"]
