build: update the deployment to allow preview branches

--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,6 +1,15 @@
 {
     "arrowParens": "avoid",
     "bracketSpacing": true,
+    "overrides": [
+        {
+            "files": "**/*.md",
+            "options": {
+                "printWidth": 120,
+                "tabWidth": 2
+            }
+        }
+    ],
     "plugins": [
         "prettier-plugin-multiline-arrays"
     ],
