--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -2,27 +2,31 @@ name: Deploy to Cloudflare Pages
 
 on:
     push:
-        branches-ignore:
-            - main
-        tags:
-            - 'v*'
-    pull_request:
         branches:
             - main
+            - next
+    pull_request:
+        types: [closed]
+        branches:
+            - main
+            - next
 
 permissions:
     contents: read
-    pages: write
-    id-token: write
+    pull-requests: read
 
 concurrency:
-    group: pages
+    group: cloudflare-pages-deploy-${{ github.ref }}
     cancel-in-progress: false
 
 jobs:
-    build:
-        name: Build Site
+    deploy:
+        name: Deploy to Cloudflare Pages
         runs-on: ubuntu-latest
+        # Only run on push or on closed PRs that were merged
+        if: |
+            github.event_name == 'push' ||
+            (github.event_name == 'pull_request' && github.event.pull_request.merged == true)
         steps:
             - name: Harden Runner
               uses: step-security/harden-runner@91182cccc01eb5e619899d80e4e971d6181294a7 # v2.10.1
@@ -35,6 +39,7 @@ jobs:
                       mise.jdx.dev:443
                       objects.githubusercontent.com:443
                       registry.npmjs.org:443
+                      api.cloudflare.com:443
 
             - name: Checkout repository
               uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
@@ -53,8 +58,82 @@ jobs:
             - name: Build static site
               run: mise run build
 
-            - name: Upload to Cloudflare Pages
-              run: wrangler pages deploy ./build
+            - name: Determine deployment type
+              id: deployment-type
+              run: |
+                  if [[ "${{ github.event_name }}" == "pull_request" ]]; then
+                      BRANCH="${{ github.event.pull_request.base.ref }}"
+                  else
+                      BRANCH="${{ github.ref_name }}"
+                  fi
+
+                  echo "branch=$BRANCH" >> $GITHUB_OUTPUT
+
+                  if [[ "$BRANCH" == "main" ]]; then
+                      echo "type=production" >> $GITHUB_OUTPUT
+                      echo "📦 Deploying to production" >> $GITHUB_STEP_SUMMARY
+                  elif [[ "$BRANCH" == "next" ]]; then
+                      echo "type=preview" >> $GITHUB_OUTPUT
+                      echo "branch-name=next" >> $GITHUB_OUTPUT
+                      echo "📦 Deploying to preview branch: next" >> $GITHUB_STEP_SUMMARY
+                  else
+                      echo "type=preview" >> $GITHUB_OUTPUT
+                      echo "branch-name=$BRANCH" >> $GITHUB_OUTPUT
+                      echo "📦 Deploying to preview branch: $BRANCH" >> $GITHUB_STEP_SUMMARY
+                  fi
+
+            - name: Deploy to Cloudflare Pages (Production)
+              if: steps.deployment-type.outputs.type == 'production'
+              run: |
+                  npx wrangler pages deploy ./build \
+                      --project-name=fahrenheight \
+                      --branch=main \
+                      --commit-hash="${{ github.sha }}" \
+                      --commit-message="${{ github.event.head_commit.message || github.event.pull_request.title }}"
               env:
                   CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
                   CLOUDFLARE_ACCOUNT_ID: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
+
+            - name: Deploy to Cloudflare Pages (Preview - Next)
+              if: steps.deployment-type.outputs.type == 'preview' && steps.deployment-type.outputs.branch-name == 'next'
+              run: |
+                  npx wrangler pages deploy ./build \
+                      --project-name=fahrenheight \
+                      --branch=next \
+                      --commit-hash="${{ github.sha }}" \
+                      --commit-message="${{ github.event.head_commit.message || github.event.pull_request.title }}"
+              env:
+                  CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
+                  CLOUDFLARE_ACCOUNT_ID: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
+
+            - name: Deploy to Cloudflare Pages (Preview - Other)
+              if: steps.deployment-type.outputs.type == 'preview' && steps.deployment-type.outputs.branch-name != 'next'
+              run: |
+                  npx wrangler pages deploy ./build \
+                      --project-name=fahrenheight \
+                      --branch="${{ steps.deployment-type.outputs.branch-name }}" \
+                      --commit-hash="${{ github.sha }}" \
+                      --commit-message="${{ github.event.head_commit.message || github.event.pull_request.title }}"
+              env:
+                  CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
+                  CLOUDFLARE_ACCOUNT_ID: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
+
+            - name: Deployment Summary
+              run: |
+                  echo "## ✅ Deployment Complete" >> $GITHUB_STEP_SUMMARY
+                  echo "" >> $GITHUB_STEP_SUMMARY
+                  echo "**Branch:** ${{ steps.deployment-type.outputs.branch }}" >> $GITHUB_STEP_SUMMARY
+                  echo "**Type:** ${{ steps.deployment-type.outputs.type }}" >> $GITHUB_STEP_SUMMARY
+                  echo "**Commit:** \`${{ github.sha }}\`" >> $GITHUB_STEP_SUMMARY
+                  echo "" >> $GITHUB_STEP_SUMMARY
+
+                  if [[ "${{ steps.deployment-type.outputs.type }}" == "production" ]]; then
+                      echo "### 🌐 Production URL" >> $GITHUB_STEP_SUMMARY
+                      echo "[https://fahrenheight.pages.dev](https://fahrenheight.pages.dev)" >> $GITHUB_STEP_SUMMARY
+                  elif [[ "${{ steps.deployment-type.outputs.branch-name }}" == "next" ]]; then
+                      echo "### 🌐 Preview URL (Fixed)" >> $GITHUB_STEP_SUMMARY
+                      echo "[https://next.fahrenheight.banseljaj.dev](https://next.fahrenheight.banseljaj.dev)" >> $GITHUB_STEP_SUMMARY
+                  else
+                      echo "### 🌐 Preview URL" >> $GITHUB_STEP_SUMMARY
+                      echo "Preview URL will be available in Cloudflare Pages dashboard" >> $GITHUB_STEP_SUMMARY
+                  fi
