ci: refine triggers for deployment to cloudflare pages

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -2,9 +2,6 @@ name: Deploy to Cloudflare Pages
 
 on:
     push:
-        branches:
-            - main
-            - next
     pull_request:
         types: [closed]
         branches:
@@ -17,7 +14,7 @@ permissions:
 
 concurrency:
     group: cloudflare-pages-deploy-${{ github.ref }}
-    cancel-in-progress: false
+    cancel-in-progress: true
 
 jobs:
     deploy:
@@ -85,8 +82,7 @@ jobs:
             - name: Deploy to Cloudflare Pages (Production)
               if: steps.deployment-type.outputs.type == 'production'
               run: |
-                  npx wrangler pages deploy ./build \
-                      --project-name=fahrenheight \
+                  npx wrangler pages deploy \
                       --branch=main \
                       --commit-hash="${{ github.sha }}" \
                       --commit-message="${{ github.event.head_commit.message || github.event.pull_request.title }}"
@@ -97,8 +93,7 @@ jobs:
             - name: Deploy to Cloudflare Pages (Preview - Next)
               if: steps.deployment-type.outputs.type == 'preview' && steps.deployment-type.outputs.branch-name == 'next'
               run: |
-                  npx wrangler pages deploy ./build \
-                      --project-name=fahrenheight \
+                  npx wrangler pages deploy \
                       --branch=next \
                       --commit-hash="${{ github.sha }}" \
                       --commit-message="${{ github.event.head_commit.message || github.event.pull_request.title }}"
@@ -109,8 +104,7 @@ jobs:
             - name: Deploy to Cloudflare Pages (Preview - Other)
               if: steps.deployment-type.outputs.type == 'preview' && steps.deployment-type.outputs.branch-name != 'next'
               run: |
-                  npx wrangler pages deploy ./build \
-                      --project-name=fahrenheight \
+                  npx wrangler pages deploy \
                       --branch="${{ steps.deployment-type.outputs.branch-name }}" \
                       --commit-hash="${{ github.sha }}" \
                       --commit-message="${{ github.event.head_commit.message || github.event.pull_request.title }}"
@@ -132,7 +126,7 @@ jobs:
                       echo "[https://fahrenheight.pages.dev](https://fahrenheight.pages.dev)" >> $GITHUB_STEP_SUMMARY
                   elif [[ "${{ steps.deployment-type.outputs.branch-name }}" == "next" ]]; then
                       echo "### 🌐 Preview URL (Fixed)" >> $GITHUB_STEP_SUMMARY
-                      echo "[https://next.fahrenheight.banseljaj.dev](https://next.fahrenheight.banseljaj.dev)" >> $GITHUB_STEP_SUMMARY
+                      echo "[https://next.fahrenheight.pages.dev](https://next.fahrenheight.pages.dev)" >> $GITHUB_STEP_SUMMARY
                   else
                       echo "### 🌐 Preview URL" >> $GITHUB_STEP_SUMMARY
                       echo "Preview URL will be available in Cloudflare Pages dashboard" >> $GITHUB_STEP_SUMMARY
