ci: refine the wrangler.toml file with correct environments

--- a/wrangler.toml
+++ b/wrangler.toml
@@ -14,4 +14,12 @@ upload_source_maps = true
 # Preview environment for next branch
 # Note: Custom domain next.fahrenheight.banseljaj.dev must be configured
 # in Cloudflare Pages dashboard under Custom domains
-[env.next]
+[env.preview]
+
+[[routes]]
+pattern = "fahrenheight.banseljaj.com"
+custom_domain = true
+
+[[routes]]
+pattern = "next.fahrenheight.banseljaj.com"
+custom_domain = true
