--- a/wrangler.toml
+++ b/wrangler.toml
@@ -12,5 +12,6 @@ upload_source_maps = true
 [env.production]
 
 # Preview environment for next branch
-# Note: Custom domain next.fahrenheight.banseljaj.dev must be configured
+# Note: Custom domain next.fahrenheight.banseljaj.com must be configured
 # in Cloudflare Pages dashboard under Custom domains
+[env.preview]
