build: removed redundant stage declarations from pre-commit config

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -17,6 +17,7 @@ repos:
                 - --branch
                 - next
           - id: check-merge-conflict
+            stages: [pre-commit, pre-merge-commit]
           - id: check-toml
           - id: check-xml
           - id: check-yaml
@@ -41,19 +42,13 @@ repos:
       rev: v1.37.1
       hooks:
           - id: yamllint
-            args:
-                - --config=$(pwd)/.yamllint.yml
-            stages:
-                - commit-msg
+            # args:
+            #     - --config-file=$(pwd)/.yamllint.yaml
 
     - repo: https://github.com/Yelp/detect-secrets
       rev: v1.5.0
       hooks:
           - id: detect-secrets
-            stages:
-                - pre-commit
-                - pre-push
-                - commit-msg
             args:
                 - '--baseline'
                 - '.secrets.baseline'
@@ -70,8 +65,7 @@ repos:
       rev: v8.27.0
       hooks:
           - id: gitleaks
-            stages:
-                - pre-push
+            stages: [pre-push]
 
     - repo: local
       hooks:
@@ -82,16 +76,14 @@ repos:
             exclude: '^dist/.*$'
             pass_filenames: false
           - id: eslint
-            stages:
-                - pre-push
             name: eslint & prettier (lint check)
+            stages: [pre-push]
             entry: mise run lint:check
             language: system
             pass_filenames: false
           - id: cog check
-            stages:
-                - commit-msg
             name: Cog Check
+            stages: [commit-msg]
             entry: cog check
             language: system
             pass_filenames: false
@@ -100,6 +92,7 @@ repos:
       rev: 'v5.1.1'
       hooks:
           - id: reuse
+            stages: [pre-push]
 
     - repo: https://github.com/renovatebot/pre-commit-hooks
       rev: 41.159.4
