--- a/REUSE.toml
+++ b/REUSE.toml
@@ -27,27 +27,28 @@ SPDX-License-Identifier = "MIT"
 # Configuration files - CC0-1.0 (Public Domain)
 [[annotations]]
 path = [
-    ".prettierrc.json",
-    ".prettierignore",
     ".gitignore",
-    "renovate.json",
     ".gitleaksignore",
+    ".hintrc",
     ".markdownlint.json",
     ".markdownlintignore",
-    ".hintrc",
+    ".mise.local.toml.example",
     ".pre-commit-config.yaml",
+    ".prettierignore",
+    ".prettierrc.json",
     ".secrets.baseline",
     ".vale.ini",
     ".vscode/settings.json",
+    ".yamllint.yaml",
+    "cog.toml",
     "eslint.config.js",
+    "mise.toml",
     "playwright.config.ts",
+    "renovate.json",
     "svelte.config.js",
     "tsconfig.json",
     "vite.config.ts",
     "vitest-setup-client.ts",
-    "cog.toml",
-    "mise.toml",
-    ".mise.local.toml.example",
 ]
 precedence = "aggregate"
 SPDX-FileCopyrightText = "2025 Ali Sajid Imami <Ali.Sajid.Imami@gmail.com>"
